--- a/src/pug/components/homepage/_info.pug
+++ b/src/pug/components/homepage/_info.pug
@@ -4,29 +4,33 @@ section#info.info
   .c-grid
     .info__wrapper
       .info__box-wrapper
-        .info__box.info__box-0
-          .info__box-title
-            p!= "Felgi"
-            span!= ""
-          .info__box-img
-            img(src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title="")
-            img(src="./img/img-box-hover-info.png" srcset="./img/img-box-hover-info@2x.png 2x" alt="" title="")
-
-        .info__box.info__box-1
-          .info__box-title
-            p!= "Układ wydechowy"
-            span!= ""
-          .info__box-img
-            img(src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title="")
-            img(src="./img/img-box-hover-info.png" srcset="./img/img-box-hover-info@2x.png 2x" alt="" title="")
-
-        .info__box.info__box-2
+        a(href="#").info__box.info__box-0
           .info__box-title
             p!= "Podręcenie mocy"
-            span!= "w samochodach na gwarancji"
-          .info__box-img
-            img(src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title="")
-            img(src="./img/img-box-hover-info.png" srcset="./img/img-box-hover-info@2x.png 2x" alt="" title="")
+            span!= "na gwarancji"
+
+          .info__box-image
+            img(src="./img/img-box-info-0.png" srcset="./img/img-box-info-0@2x.png 2x" alt="" title="")
+
+          .info__box-square
+
+        a(href="#").info__box.info__box-1
+          .info__box-title
+            p!= "Pedalbox"
+
+          .info__box-image
+            img(src="./img/img-box-info-1.png" srcset="./img/img-box-info-1@2x.png 2x" alt="" title="")
+
+          .info__box-square
+
+        a(href="#").info__box.info__box-2
+          .info__box-title
+            p!= "O nas"
+
+          .info__box-image
+            img(src="./img/img-box-info-2.png" srcset="./img/img-box-info-2@2x.png 2x" alt="" title="")
+
+          .info__box-square
 
 
 // INFO :: END
