--- a/src/pug/components/homepage/_main.pug
+++ b/src/pug/components/homepage/_main.pug
@@ -33,6 +33,6 @@ section.section#main.main
                       option(value!= val)!= "Silnik " + val
 
       .main__wrapper-right
-        img(src="./img/img-car-main.png" srcset="" alt="" title="")
+        img(src="./img/img-car-main-1.png" srcset="" alt="" title="")
 
 // MAIN :: END
